# ccut

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
app/: main.cpp
include/ccut/: field_extractor.hpp  options.hpp
src/: field_extractor.cpp  options.cpp
tests/: test_field_extractor.cpp  test_options.cpp
